package main;

public interface IPrintStrategy {
    void printDiagram(DataSet dataset);
}
