package main;

public enum LoadDataStrategyType {
    LOCAL,
    REMOTE
}
