package main;

public enum PrintStrategyType {
    POINT_CLOUD,
    BAR
}
