@startuml

title __PATRON-ESTRATEGIA's Class Diagram__\n

  namespace main {
    class main.App {
    }
  }
  

  namespace main {
    class main.ContextLoadData {
    }
  }
  

  namespace main {
    class main.ContextPrintData {
    }
  }
  

  namespace main {
    class main.DataSet {
    }
  }
  

  namespace main {
    interface main.ILoadDataStrategy {
    }
  }
  

  namespace main {
    interface main.IPrintStrategy {
    }
  }
  

  namespace main {
    class main.Lienzo {
    }
  }
  

  namespace main {
    class main.LoadDataFactory {
    }
  }
  

  namespace main {
    enum LoadDataStrategyType {
    }
  }
  

  namespace main {
    class main.LoadLocalData {
    }
  }
  

  namespace main {
    class main.LoadRemoteData {
    }
  }
  

  namespace main {
    class main.Main {
    }
  }
  

  namespace main {
    class main.PrintBarChart {
    }
  }
  

  namespace main {
    class main.PrintFactory {
    }
  }
  

  namespace main {
    class main.PrintPointCloud {
    }
  }
  

  namespace main {
    enum PrintStrategyType {
    }
  }
  

  namespace tests {
    class tests.AnalyzerTest {
    }
  }
  

  main.App -up-|> javax.swing.JDialog
  main.ContextLoadData o-- main.ILoadDataStrategy : loadDataStrategy
  main.ContextPrintData o-- main.IPrintStrategy : printDataStrategy
  main.Lienzo -up-|> javax.swing.JDialog
  main.LoadLocalData .up.|> main.ILoadDataStrategy
  main.LoadRemoteData .up.|> main.ILoadDataStrategy
  main.PrintBarChart .up.|> main.IPrintStrategy
  main.PrintPointCloud .up.|> main.IPrintStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
